# chat-api

./: .env.develop  Dockerfile  Infrastructure_diagram.drawio  README.md  docker-compose.yml  pyproject.toml  setup_db.py
app/: main.py
app/api/: api.py  dependencies.py
app/api/api_v1/endpoints/: message.py  setting.py  user.py
app/core/: auth.py  constants.py  env.py  messages.py
app/crud/: crud_message.py  crud_message_status.py  crud_notification_setting.py  crud_user.py
app/db/: db.py
app/domains/: message.py  setting.py  user.py
app/models/: __init__.py  message.py  message_status.py  mixins.py  notification_setting.py  user.py
app/schemas/request/: message.py  setting.py  user.py
app/schemas/response/: message.py  setting.py  user.py
app/services/: direct_chat.py  group_chat.py  mail.py  message.py  notification.py  setting.py  user.py
app/views/: templates_config.py  views.py
app/views/endpoints/: login.py
app/views/templates/: chat.html  incoming_message.txt  login.html
app/websocket/: dependencies.py  direct_chat_manager.py  group_chat_manager.py  websocket.py
app/websocket/endpoints/: chat.py
